# EchecsChaos

./: .gitignore  CMakeLists.txt  MauvaisCode.txt  main.cpp
Core/Audio/: AudioManager.cpp  AudioManager.h
Core/Base/: Board.cpp  Board.h  Card.h  Piece.h  Player.cpp  Player.h  Position.h  Tile.h
Core/CardsList/: BlockCard.h  ChameleonCard.h  FogCard.h  FreezeCard.h  HideTimeCard.h  LavaWallCard.h  MeteoriteCard.h  MysteryCard.h  PawnSprintCard.h  TeleportCard.h  TimeCard.h
Core/Config/: AudioPath.h  Constant.h  PiecesPath.h
Core/Engine/: BoardInteractionManager.cpp  BoardInteractionManager.h  GameEngine.cpp  GameEngine.h  MoveValidator.cpp  MoveValidator.h  PromotionHandler.cpp  PromotionHandler.h  ScoreHandler.cpp  ScoreHandler.h  Shop.cpp  Shop.h  SpecialMoveHandler.cpp  SpecialMoveHandler.h
Core/Event/: Event.h  EventManager.cpp  EventManager.h
Core/Network/: Network.cpp  Network.h
Core/Pieces/: Bishop.cpp  Bishop.h  Chameleon.cpp  Chameleon.h  Duck.cpp  Duck.h  Idiot.cpp  Idiot.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  PionDebile.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  pionDebile.cpp
Core/Time/: Chono.h  Chrono.cpp  Chrono.h
Graphics/: CardRenderer.cpp  CardRenderer.h  PieceDrawer.h  PortalDrawer.h  Renderer.cpp  Renderer.h  VisualEffect.h
Graphics/Pieces/: BishopDrawer.h  ChameleonDrawer.h  DuckDrawer.h  IdiotDrawer.h  KingDrawer.h  KnightDrawer.h  PawnDrawer.h  PionDebileDrawer.h  QueenDrawer.h  RookDrawer.h
Graphics/UI/: Button.cpp  Button.h  GamemodeMenu.cpp  GamemodeMenu.h  PromotionMenu.cpp  PromotionMenu.h  Settings.cpp  (+7 more)
(+15 files in other folders)
